--- a/template/project.html
+++ b/template/project.html
@@ -3,6 +3,8 @@
 
 <head>
 	<?php include('template/head.php'); ?>
+	<link rel="stylesheet" href="../css/general.css">
+	<link rel="stylesheet" href="../css/project.css">
 </head>
 
 <body>
